--- a/nginx/conf/nginx.template.conf
+++ b/nginx/conf/nginx.template.conf
@@ -57,24 +57,7 @@ rtmp {
             deny publish all;
 
             push rtmp://localhost/youtube/${name};
-
-            exec ffmpeg -i rtmp://localhost/$app/$name -c:v libx264 -preset veryfast -c:a copy 
-                -threads 2
-                -c:v libx264
-                -profile:v main
-                -preset:v veryfast
-                -level 4.2
-                -b:v 2000k
-                -bufsize 2000k
-                -maxrate 2000k
-                -s 1280x720 -r 30
-                -g 120 -keyint_min 60 -x264opts "keyint=120:min-keyint=120:no-scenecut"
-                -tune zerolatency
-                -c:a copy
-                -f flv rtmp://localhost/twitch/${name};
-
-            push rtmp://localhost/dailymotion/${name};
-            push rtmp://localhost/hitbox/${name};
+            push rtmp://localhost/facebook/${name};
         }
         
         application youtube {
@@ -87,34 +70,14 @@ rtmp {
             push rtmp://a.rtmp.youtube.com/live2/{{ youtube_key }};
         }
 
-        application twitch {
+        application facebook {
             live on;
             record off;
             
             allow publish 127.0.0.1;
             deny publish all;
 
-            push rtmp://live-cdg.twitch.tv/app/{{ twitch_key }};
-        }
-
-        application dailymotion {
-            live on;
-            record off;
-            
-            allow publish 127.0.0.1;
-            deny publish all;
-
-            push rtmp://publish.dailymotion.com/publish-dm/{{ dailymotion_key }};
-        }
-
-        application hitbox {
-            live on;
-            record off;
-
-            allow publish 127.0.0.1;
-            deny publish all;
-
-            push rtmp://live.hitbox.tv/push/{{ hitbox_key }};
+            push rtmps://live-api-s.facebook.com:443/rtmp/{{ facebook_key }};
         }
     }
 }
