--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,12 +40,12 @@ jobs:
     - name: Upload conf
       uses: actions/upload-artifact@v1.0.0
       with:
-        name: conf
+        name: conf-${{ matrix.os }}
         path: /usr/local/nginx/conf
     - name: Upload logs
       uses: actions/upload-artifact@v1.0.0
       with:
-        name: logs
+        name: logs-${{ matrix.os }}
         path: /usr/local/nginx/logs
     - name: Check for issues
       continue-on-error: true
