--- a/nginx/conf/nginx.template.conf
+++ b/nginx/conf/nginx.template.conf
@@ -53,8 +53,11 @@ rtmp {
             live on;
             record off;
             
-            allow publish {{ my_ip_address }};
-            deny publish all;
+            if ($arg_psk = '{{ stream_key }}') {
+                return 201;
+            }
+            return 401;
+            allow publish all;
 
             push rtmp://localhost/youtube/${name};
             push rtmp://localhost/facebook/${name};
