--- a/nginx/conf/nginx.template.conf
+++ b/nginx/conf/nginx.template.conf
@@ -82,8 +82,8 @@ rtmp {
             
             allow publish 127.0.0.1;
             deny publish all;
-
-            push rtmps://live-api-s.facebook.com:443/rtmp/{{ facebook_key }};
+            # goes to stunnel facebook service
+            push rtmp://localhost:1234/rtmp/{{ facebook_key }};
         }
 
         application twitch {
