--- a/stunnel/stunnel.conf
+++ b/stunnel/stunnel.conf
@@ -5,4 +5,4 @@ debug = 5
 [facebook-service]
 client = yes
 accept = 1234
-connect = rtmps://live-api-s.facebook.com:443
+connect = live-api-s.facebook.com:443
