--- a/stunnel/stunnel.conf
+++ b/stunnel/stunnel.conf
@@ -1,6 +1,7 @@
 # /etc/stunnel/stunnel.conf
 foreground = yes
 debug = 5
+output = /var/log/stunnel4/stunnel.log
 
 [facebook-service]
 client = yes
