--- a/stunnel/stunnel.conf
+++ b/stunnel/stunnel.conf
@@ -7,3 +7,8 @@ output = /var/log/stunnel4/stunnel.log
 client = yes
 accept = 1234
 connect = live-api-s.facebook.com:443
+
+[secure-streaming-service]
+client = yes
+accept = 443
+transparent = destination
