--- a/nginx/conf/nginx.template.conf
+++ b/nginx/conf/nginx.template.conf
@@ -48,11 +48,11 @@ rtmp {
     server {
         listen 1935;
         chunk_size 8192;
-        if ($arg_psk = '{{ stream_key }}') {
-            return 201;
-        }
-        return 401;
-        allow publish all;
+        deny publish 192.168.1.1
+        allow publish 192.168.1.0/24;
+        deny publish 192.168.0.1
+        allow publish 192.168.0.0/24;
+        deny publish all;
         application live {
             live on;
             record off;
@@ -81,7 +81,7 @@ rtmp {
             allow publish 127.0.0.1;
             deny publish all;
             # goes to stunnel facebook service
-            push rtmp://localhost:1234/rtmp/{{ facebook_key }};
+            push rtmp://localhost:1935/rtmp/{{ facebook_key }};
         }
 
         application twitch {
