--- a/stunnel/stunnel.conf
+++ b/stunnel/stunnel.conf
@@ -5,8 +5,9 @@ output = /var/log/stunnel4/stunnel.log
 
 [facebook-service]
 client = yes
-accept = 1234
+accept = 127.0.0.1:1935
 connect = live-api-s.facebook.com:443
+verifyChain = no
 
 [secure-streaming-service]
 client = yes
