--- a/nginx/conf/nginx.template.conf
+++ b/nginx/conf/nginx.template.conf
@@ -48,15 +48,11 @@ rtmp {
     server {
         listen 1935;
         chunk_size 8192;
-        deny publish 192.168.1.1
-        allow publish 192.168.1.0/24;
-        deny publish 192.168.0.1
-        allow publish 192.168.0.0/24;
-        deny publish all;
+        allow publish all;
         application live {
             live on;
+            on_publish /rtmp_auth.php;
             record off;
-
             push rtmp://localhost/youtube/${name};
             push rtmp://localhost/facebook/${name};
             # exec ffmpeg -i rtmp://localhost/$app/$name -c:v libx264 -preset veryfast -c:a copy -threads 2 -c:v libx264 -profile:v main -preset:v veryfast -level 4.2 -b:v 2000k -bufsize 2000k -maxrate 2000k -s 1280x720 -r 30 -g 120 -keyint_min 60 -x264opts "keyint=120:min-keyint=120:no-scenecut" -tune zerolatency -c:a copy -f flv rtmp://localhost/twitch/${name};
