--- a/nginx/conf/nginx.template.conf
+++ b/nginx/conf/nginx.template.conf
@@ -51,7 +51,7 @@ rtmp {
         allow publish all;
         application live {
             live on;
-            on_publish /rtmp_auth.php;
+            on_publish http://localhost/rtmp_auth.php;
             record off;
             push rtmp://localhost/youtube/${name};
             push rtmp://localhost/facebook/${name};
